Fix spacing issue with amazon on login

--- a/cypherpunk-com/src/app/layouts/account/upgrade/upgrade.component.scss
+++ b/cypherpunk-com/src/app/layouts/account/upgrade/upgrade.component.scss
@@ -146,7 +146,7 @@
   }
 
   .amazon-pay {
-    .btn { width: 280px; margin: 0; padding: 20px 0 0; }
+    .btn { width: 280px; margin: 0; }
   }
 
   .agree { font-size: 14px; padding: 40px 0 0; }
