--- a/cypherpunk-com/src/app/layouts/public/pricing/pricing.component.scss
+++ b/cypherpunk-com/src/app/layouts/public/pricing/pricing.component.scss
@@ -88,7 +88,7 @@
   }
 
   .amazon-pay {
-    .btn { width: 280px; margin: 0; padding: 20px 0 0; }
+    .btn { width: 280px; margin: 0; }
   }
 
   .agree { font-size: 14px; padding: 20px 0 0; }
